# openzl-row-col

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: discovery.rs  main.rs  openzl.rs  stats.rs  zstd.rs
crates/openzl/: Cargo.toml
crates/openzl-sys/: Cargo.toml  build.rs  wrapper.h
crates/openzl-sys/src/: lib.rs
crates/openzl/src/: lib.rs  proto.rs
crates/openzl/testdata/: otap_compressor.zlc  otlp_metrics_compressor.zlc
crates/openzl/testdata/otlp_metrics/: trained.zlc
crates/openzl/testdata/otlp_traces/: trained.zlc
go/: go.mod  go.sum
go/cmd/cardinality/: main.go
go/cmd/rebatch/: main.go
go/cmd/split/: main.go
go/cmd/tpch-gen/: main.go
go/pkg/arrowutil/: nodedup_metrics_builder.go  nodedup_metrics_producer.go  nodedup_traces_builder.go  nodedup_traces_producer.go  nosort_metrics_producer.go  producer.go  producer_test.go
go/pkg/otlpdict/: converter.go  otlpdict_metrics.pb.go
go/pkg/otlpmetricsdict/: converter.go  otlpdict_metrics.pb.go
go/pkg/otlptracesdict/: converter.go  otlpdict_traces.pb.go
go/pkg/tpch/: tpch.pb.go
proto/: otlpdict_metrics.proto  otlpdict_traces.proto  tpch.proto
report/: .gitignore  main.tex  refs.bib
scripts/: generate.sh  paper_plots.py  presentation_plots.py  pyproject.toml  train_compressors.py  visualize_batch_size.py
