[project]
name = "benchmark-scripts"
version = "0.1.0"
description = "Visualization and analysis scripts for compression benchmarks"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.scripts]
visualize-batch-size = "visualize_batch_size:main"
paper-plots = "paper_plots:main"
presentation-plots = "presentation_plots:main"
